# fw-test-harness

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  fixedwing_controller.py  html_report_generator.py  setup_archlinux.sh  simulator.py
Firmware_custom/ecl/: ecl.h
Firmware_custom/param/: param.c  param.cpp  param_load.cpp  param_load.h
cmake/modules/: FindEigen.cmake
fw_test_harness/: CMakeLists.txt  analysis.py  ecl_controller.cpp  ecl_controller.pyx  fixedwing_controller.py  html_report_generator.py  mtecs.pyx  plots.py  setup.py.in  simulator.py
